Update required Java release to 11 (#1024)