@@ -32,7 +32,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -264,12 +263,11 @@ class ReportTest {
     @Test
     void testHTMLReport(@TempDir File folder) throws IOException {
         List<String> files = Collections.emptyList();
-        List<Report> reports = Collections.unmodifiableList(
-                Arrays.asList(
-                        new BuildStatisticsReport(folder, builds),
-                        new NVRReport(folder, builds),
-                        new GAVReport(folder, builds),
-                        new ProductReport(folder, builds)));
+        List<Report> reports = List.of(
+                new BuildStatisticsReport(folder, builds),
+                new NVRReport(folder, builds),
+                new GAVReport(folder, builds),
+                new ProductReport(folder, builds));
         HTMLReport htmlReport = new HTMLReport(
                 folder,
                 files,
